Fixed positioning for star icons on main contents on mobile display

--- a/src/scss/mobile/_breakpoints.scss
+++ b/src/scss/mobile/_breakpoints.scss
@@ -60,4 +60,12 @@
             font-size: util.rem(18);
         }
     }
+
+    .contents__paragraph-comms__star:nth-of-type(1) {
+        margin-left: 0;
+    }
+
+    .contents__paragraph-comms__star:nth-of-type(2) {
+        margin-right: 0;
+    }
 }
